--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1,12 +1,12 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">MVHub Plus</string><string name="retry">Try Again</string>
+    <string name="app_name">VIPA</string><string name="retry">Try Again</string>
     <string name="no_connection">इंटरनेट नहीं है</string>
     <string name="check_connection_text">Check your connection.</string>
     <string name="change_password">अपना पासवर्ड बदलें</string>
     <string name="checkout">Checkout</string>
     <string name="email">ईमेल</string>
     <string name="password">पासवर्ड</string>
-    <string name="on_enveu">on MVHub Plus!</string>
+    <string name="on_enveu">on VIPA!</string>
     <string name="by_email">By Email</string>
     <string name="by_line">By Line</string>
     <string name="guest_user">Guest User</string>
@@ -85,8 +85,8 @@
     <string name="redeem_code_already_used">Redeem code is already used.</string>
     <string name="subscribed_already">This user is already subscribed to this plan.</string>
     <string name="redeemed_success">Redeemed successfully.</string>
-    <string name="prime_memb_issue">MVHub+ Membership Issue</string>
-    <string name="contactus_description">If you are prompted to subscribe, but have another account which is subscribed to MvHub+, please log in using that account.</string>
+    <string name="prime_memb_issue">VIPA Membership Issue</string>
+    <string name="contactus_description">If you are prompted to subscribe, but have another account which is subscribed to VIPA, please log in using that account.</string>
     <string name="contactus_second_desc">Still need help? How would you like to contact us?</string>
     <string name="user_not_already_in_watchlist">This asset is not available in this user\'s watchlist</string>
     <string name="user_already_not_liked">This asset is not liked by the user​</string>
@@ -131,7 +131,7 @@
     <string name="image_upload_fail">Image upload failed</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
-    <string name="search_mv_hub">खोजें MvHub(न्यूनतम 3 वर्ण)</string>
+    <string name="search_mv_hub">खोजें VIPA(न्यूनतम 3 वर्ण)</string>
     <string name="show_all_results">Show All</string>
     <string name="series">सीरीज</string>
     <string name="article">Article</string>
@@ -160,7 +160,7 @@
     <string name="exclusive">Premium</string>
     <string name="splash_screen">Splash screen</string>
     <string name="new_version_available">New version available</string>
-    <string name="please_update_your_app">We have a new version available. Kindly update to enjoy MvHub.</string>
+    <string name="please_update_your_app">We have a new version available. Kindly update to enjoy VIPA.</string>
     <string name="result_caps">RESULT</string>
     <string name="results_caps">RESULTS</string>
     <string name="no_season">No season</string>
@@ -335,6 +335,6 @@
     <string name="quarterly">Quarterly Pack</string>
     <string name="half_yearly">Half Yearly Pack</string>
     <string name="annual">Annual Pack</string>
-    <string name="purchase_title">Access to premium content is just a click away. Select the package best suited for you to access this content and many more titles brought to you by MVHub exclusively on MVHub+</string>
+    <string name="purchase_title">Access to premium content is just a click away. Select the package best suited for you to access this content and many more titles brought to you by VIPA exclusively on VIPA</string>
 
 </resources>
