--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">MVHub Plus</string>
+    <string name="app_name">VIPA</string>
     <string name="retry">Try Again</string>
     <string name="no_connection">Tidak ada internet.</string>
     <string name="check_connection_text">Check your connection.</string>
@@ -7,7 +7,7 @@
     <string name="checkout">Checkout</string>
     <string name="email">Surel</string>
     <string name="password">Kata sandi</string>
-    <string name="on_enveu">on MVHub Plus!</string>
+    <string name="on_enveu">on VIPA!</string>
     <string name="full_name">Name</string>
     <string name="signup"><b><u>Daftar</u></b></string>
     <string name="login">Login</string>
@@ -43,7 +43,7 @@
     <string name="user_already_in_watchlist">This asset already exists in this user\'s watchlist​.</string>
     <string name="user_already_liked">This asset is already liked by the user​</string>
 
-    <string name="sign_in_with_enveu">Sign in with MVHub+</string>
+    <string name="sign_in_with_enveu">Sign in with VIPA</string>
     <string name="facebook">Facebook</string>
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="google">Google +</string>
@@ -86,8 +86,8 @@
     <string name="redeem_code_already_used">Redeem code is already used.</string>
     <string name="subscribed_already">This user is already subscribed to this plan.</string>
     <string name="redeemed_success">Redeemed successfully.</string>
-    <string name="prime_memb_issue">MVHub+ Membership Issue</string>
-    <string name="contactus_description">If you are prompted to subscribe, but have another account which is subscribed to MvHub+, please log in using that account.</string>
+    <string name="prime_memb_issue">VIPA Membership Issue</string>
+    <string name="contactus_description">If you are prompted to subscribe, but have another account which is subscribed to VIPA, please log in using that account.</string>
     <string name="contactus_second_desc">Still need help? How would you like to contact us?</string>
     <string name="user_not_already_in_watchlist">This asset is not available in this user\'s watchlist</string>
     <string name="user_already_not_liked">This asset is not liked by the user​</string>
@@ -132,7 +132,7 @@
     <string name="image_upload_fail">Image upload failed</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
-    <string name="search_mv_hub">Cari MVHub (min 3 karakter)</string>
+    <string name="search_mv_hub">Cari VIPA (min 3 karakter)</string>
     <string name="show_all_results">Show All</string>
     <string name="series">Series</string>
     <string name="article">Article</string>
@@ -161,7 +161,7 @@
     <string name="exclusive">Premium</string>
     <string name="splash_screen">Splash screen</string>
     <string name="new_version_available">New version available</string>
-    <string name="please_update_your_app">We have a new version available. Kindly update to enjoy MvHub.</string>
+    <string name="please_update_your_app">We have a new version available. Kindly update to enjoy VIPA.</string>
     <string name="result_caps">RESULT</string>
     <string name="results_caps">RESULTS</string>
     <string name="no_season">No season</string>
@@ -334,6 +334,6 @@
     <string name="quarterly">Quarterly Pack</string>
     <string name="half_yearly">Half Yearly Pack</string>
     <string name="annual">Annual Pack</string>
-    <string name="purchase_title">Access to premium content is just a click away. Select the package best suited for you to access this content and many more titles brought to you by MVHub exclusively on MVHub+</string>
+    <string name="purchase_title">Access to premium content is just a click away. Select the package best suited for you to access this content and many more titles brought to you by VIPA exclusively on VIPA</string>
 
 </resources>
