branding chnages wip

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -241,8 +241,8 @@
     <string name="coming_soon">Coming Soon</string>
 
     <string name="title_home">Home</string>
-    <string name="title_free">Free</string>
-    <string name="title_premium">Premium</string>
+    <string name="title_free">Podcast</string>
+    <string name="title_premium">Program</string>
     <string name="title_live_tv">Live TV</string>
     <string name="title_more1">More</string>
 
