--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -238,8 +238,8 @@
     <string name="coming_soon">Coming Soon</string>
 
     <string name="title_home">होम</string>
-    <string name="title_free">समाचार</string>
-    <string name="title_premium">प्रदर्शन</string>
+    <string name="title_free">पॉडकास्ट</string>
+    <string name="title_premium">कार्यक्रम</string>
     <string name="title_live_tv">चलचित्र</string>
     <string name="title_more1">अधिक</string>
 
