--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -239,8 +239,8 @@
     <string name="coming_soon">Coming Soon</string>
 
     <string name="title_home">Beranda</string>
-    <string name="title_free">Film</string>
-    <string name="title_premium">Acara TV</string>
+    <string name="title_free">Podcast</string>
+    <string name="title_premium">Program</string>
     <string name="title_live_tv">premi</string>
     <string name="title_more1">lebih</string>
 
