--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,8 +236,8 @@
 
 
     <string name="title_home">Home</string>
-    <string name="title_free">Free</string>
-    <string name="title_premium">Premium</string>
+    <string name="title_free">Podcast</string>
+    <string name="title_premium">Program</string>
     <string name="title_live_tv">Live TV</string>
     <string name="title_more1">More</string>
     <string name="delete_from_watchhistory">Video removed from Watch History</string>
