--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -142,7 +142,7 @@
     <string name="title_free">พอดคาสต์</string>
     <string name="title_premium">โปรแกรม</string>
     <string name="title_live_tv">ช่องทีวี</string>
-    <string name="title_more1">เพิ่มเติม</string>
+    <string name="title_more1">ข้อมูลส่วนตัว</string>
     <string name="more">เพิ่มเติม</string>
     <string name="player_error">ไม่สามารถทำตามที่ต้องการได้ กรุณาลองใหม่อีกครั้ง</string>
     <string name="tab_heading_episodes">ตอน</string>
