--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -242,7 +242,7 @@
     <string name="title_free">Podcast</string>
     <string name="title_premium">Program</string>
     <string name="title_live_tv">premi</string>
-    <string name="title_more1">lebih</string>
+    <string name="title_more1">Profile</string>
 
     <string name="delete_from_watchhistory">Video removed from Watchhistory</string>
     <string name="delete_from_watchhistory_error">Video can not be removed  from Watchhistory</string>
