branding changes wip

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -124,7 +124,7 @@
     <string name="no_result_found">No result found!</string>
     <string name="popular_search">PENCARIAN POPULER</string>
     <string name="recent_searches">Recent Searches</string>
-    <string name="no_result">Sorry! we could not find any results.</string>
+    <string name="no_result">No results found</string>
     <string name="no_result1">Try searching for another episode, movie or show</string>
 
 
