--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -105,7 +105,7 @@
     <string name="no_result_found">ไม่พบผลลัพธ์</string>
     <string name="popular_search">ค้นหาเรื่องยอดนิยม</string>
 
-    <string name="no_result">ขออภัย ไม่พบสิ่งที่คุณกำลังค้นหา</string>
+    <string name="no_result">ไม่พบผลลัพธ์</string>
     <string name="no_result1">ลองค้นหาตอนอื่นๆ</string>
 
 
