--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -125,7 +125,7 @@
     <string name="popular_search">Popular Searches</string>
     <string name="recent_searches">Recent Searches</string>
     <string name="no_result_found_title">No Results Found</string>
-    <string name="no_result">Sorry! we could not find any results.</string>
+    <string name="no_result">No results found</string>
     <string name="no_result1">Try searching for another episode, movie or show</string>
 
 
