--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -123,7 +123,7 @@
     <string name="no_result_found">No result found!</string>
     <string name="popular_search">लोकप्रिय खोजें</string>
     <string name="recent_searches">Recent Searches</string>
-    <string name="no_result">Sorry! we could not find any results.</string>
+    <string name="no_result">No results found</string>
     <string name="no_result1">Try searching for another episode, movie or show</string>
 
 
