--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -205,6 +205,7 @@
     <string name="delete_from_watchlist">Are you sure want to remove video from Watchlist?</string>
     <string name="delete_from_watchhistory_message">Are you sure want to remove video from Watch History?</string>
     <string name="all_episode">All Episodes</string>
+    <string name="video_streaming">VIDEO STREAMING PLATFORM</string>
     <string name="purchased_successfully">Purchased Successfully</string>
 
     <string name="something_went_wrong_at_our_end">Something went wrong at our end</string>
@@ -345,5 +346,7 @@
     <string name="half_yearly">Half Yearly Pack</string>
     <string name="annual">Annual Pack</string>
     <string name="purchase_title">Access to premium content is just a click away. Select the package best suited for you to access this content and many more titles brought to you by VIPA exclusively on VIPA</string>
+    <string name="start_access">Start (Access without Login)</string>
+    <string name="content_preminum">Content Premium</string>
 
 </resources>
