--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -147,6 +147,7 @@
     <string name="player_error">ไม่สามารถทำตามที่ต้องการได้ กรุณาลองใหม่อีกครั้ง</string>
     <string name="tab_heading_episodes">ตอน</string>
     <string name="all_episode">ตอนทั้งหมด</string>
+    <string name="video_streaming">VIDEO STREAMING PLATFORM</string>
 
     <string name="tab_heading_other">หาแบบนี้เพิ่มเติมอีก</string>
     <string name="download_settings">ตั้งค่าดาวน์โหลด</string>
@@ -368,5 +369,7 @@
     <string name="half_yearly">ครึ่งปี</string>
     <string name="annual">ประจำปี</string>
     <string name="purchase_title">เข้าถึงเนื้อหาระดับพรีเมียมได้ในคลิกเดียว เลือกแพ็กเกจที่เหมาะที่สุดสำหรับคุณในการเข้าถึงเนื้อหานี้และเนื้อหาอื่น ๆ อีกมากมายที่ VIPA นำเสนอเฉพาะบน VIPA</string>
+    <string name="start_access">เริ่มต้น (เข้าถึงโดยไม่ต้องเข้าสู่ระบบ)</string>
+    <string name="content_preminum">Content Premium</string>
 
 </resources>
