--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -75,6 +75,7 @@
 
 
     <string name="notification">Notifications</string>
+    <string name="manage_account">Manage Account</string>
     <string name="login_signup">Log In / Sign Up</string>
     <string name="login_txt">Login</string>
     <string name="update">Update</string>
