--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -68,6 +68,7 @@
     <string name="no_result_found_title">No Results Found</string>
 
     <string name="notification">सूचनाएं</string>
+    <string name="manage_account">Manage Account</string>
     <string name="login_signup">Log In / Sign Up</string>
     <string name="login_txt">लॉग इन</string>
     <string name="update">Update</string>
