--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <string name="save">Save</string>
     <string name="new_password">New Password</string>
     <string name="notification">Notifications</string>
+    <string name="manage_account">Manage Account</string>
     <string name="login_signup">Log In / Sign Up</string>
     <string name="login_txt">Login</string>
     <string name="update">Update</string>
