--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,6 +16,9 @@
 
     <string name="on_enveu">on VIPA!</string>
     <string name="full_name">Name</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="address">Address</string>
+    <string name="dob">Date of Birth</string>
     <string name="buy_for">Subscribe now for next</string>
     <string name="rent_for">Rent for</string>
     <string name="day_Rental">days</string>
