--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -15,6 +15,9 @@
     <string name="check_connection">Check Connection</string>
 
     <string name="full_name">पूरा नाम</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="address">Address</string>
+    <string name="dob">Date of Birth</string>
     <string name="signup"><b><u>साइन अप करें</u></b></string>
     <string name="login">लॉगिन</string>
     <string name="buy_for">Subscribe now for next</string>
