--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -46,13 +46,16 @@
     <string name="email">อีเมล</string>
     <string name="password">พาสเวิร์ด</string>
     <string name="full_name">ชื่อ</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="address">Address</string>
+    <string name="dob">Date of Birth</string>
     <string name="signup"><b><u>ลงทะเบียน</u></b></string>
     <string name="login">เข้าสู่ระบบ</string>
     <string name="sign_in_with_enveu">เข้าสู่ระบบโดย VIPA</string>
     <string name="facebook">เฟสบุ๊ค</string>
     <string name="sign_in_with_facebook">เข้าสู่ระบบโดย เฟสบุ๊ค</string>
     <string name="google">กูเกิ้ล</string>
-    <string name="register">ลงทะเบียน</string>
+    <string name="register">ลงทะเบียนสมัครสมาชิก</string>
     <string name="sign_in"><b><u>เข้าสู่ระบบ</u></b></string>
     <string name="or_login_with">หรือเข้าระบบด้วย</string>
     <string name="or">หรือ</string>
@@ -370,7 +373,7 @@
     <string name="half_yearly">ครึ่งปี</string>
     <string name="annual">ประจำปี</string>
     <string name="purchase_title">เข้าถึงเนื้อหาระดับพรีเมียมได้ในคลิกเดียว เลือกแพ็กเกจที่เหมาะที่สุดสำหรับคุณในการเข้าถึงเนื้อหานี้และเนื้อหาอื่น ๆ อีกมากมายที่ VIPA นำเสนอเฉพาะบน VIPA</string>
-    <string name="start_access">เริ่มต้น (เข้าถึงโดยไม่ต้องเข้าสู่ระบบ)</string>
+    <string name="start_access">เริ่มเข้าใช้งาน</string>
     <string name="content_preminum">Content Premium</string>
 
 </resources>
