--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="cannot_find_any_subs">cannot find any subscription or subscription cannot contain price</string>
     <string name="on_enveu">on VIPA!</string>
     <string name="full_name">Name</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="address">Address</string>
+    <string name="dob">Date of Birth</string>
     <string name="buy_for">Subscribe now for next</string>
     <string name="rent_for">Rent for</string>
     <string name="not_avail_for_Region">This feature is not available in your region</string>
