--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -46,6 +46,8 @@
     <string name="email">อีเมล</string>
     <string name="password">พาสเวิร์ด</string>
     <string name="full_name">ชื่อ</string>
+    <string name="display_name">Enter your display Name</string>
+    <string name="enter_email_address">Enter Email Address</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="address">Address</string>
     <string name="dob">Date of Birth</string>
