--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="cannot_find_any_subs">cannot find any subscription or subscription cannot contain price</string>
     <string name="on_enveu">on VIPA!</string>
     <string name="full_name">Name</string>
+    <string name="display_name">Enter your display Name</string>
+    <string name="enter_email_address">Enter Email Address</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="address">Address</string>
     <string name="dob">Date of Birth</string>
