--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -11,6 +11,7 @@
     <string name="full_name">Name</string>
     <string name="display_name">Enter your display Name</string>
     <string name="enter_email_address">Enter Email Address</string>
+    <string name="create_password">Create Password minimum 6 characters</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="address">Address</string>
     <string name="dob">Date of Birth</string>
