--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -346,5 +346,6 @@
     <string name="start_access">Start (Access without Login)</string>
     <string name="content_preminum">Content Premium</string>
     <string name="select_genre">Select genre as per your interest for best result you can select multiple choices of interest (max 5)</string>
+    <string name="finish">Finish</string>
 
 </resources>
