--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -110,7 +110,7 @@
     <string name="credential_mismatch">क्रेडेंशियल्स मिसमैच!</string>
     <string name="strong_password_required">कृपया 8 से 20 वर्णों के बीच एक पासवर्ड दर्ज करें और इसमें कम से कम 1 विशेष वर्ण होना चाहिए</string>
     <string name="email_check_signup">कृपया ईमेल दर्ज करें</string>
-
+    <string name="password_match">Password doesn\'t match</string>
     <string name="empty_name">कृपया पूरा नाम दर्ज करें</string>
     <string name="name_validation_profile">Name is required</string>
     <string name="profile_update_successfully">Updated Successfully!</string>
