user management wip

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -206,6 +206,7 @@
     <string name="per_Week">for 1 week</string>
     <string name="per_Month">for 1 month</string>
     <string name="you_are_logged_out">You are logged out</string>
+    <string name="number_Cannot_change">Phone Number cannot be changed after setting once</string>
     <string name="error">Error</string>
     <string name="forgot_pwd">Forgot Password</string>
     <string name="delete_comment">Delete Comment</string>
