--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,6 +200,7 @@
     <string name="per_Week">for 1 week</string>
     <string name="per_Month">for 1 month</string>
     <string name="you_are_logged_out">You are logged out</string>
+    <string name="number_Cannot_change">Phone Number cannot be changed after setting once</string>
     <string name="redeemed_success">Redeemed successfully.</string>
     <string name="error">Error</string>
     <string name="prime_memb_issue">VIPA Membership Issue</string>
