--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -64,7 +64,7 @@
 
     <string name="or_caps">- Atau -</string>
     <string name="skip">Melewatkan</string>
-    <string name="forgot_password">Lupa kata sandi?</string>
+    <string name="forgot_password">Lupa kata sandi</string>
     <string name="forgot_password_u"><b><u>Lupa kata sandi?</u></b></string>
     <string name="email_id">Email for FB Login </string>
     <string name="dont_have_an_account">Tidak punya akun?</string>
