--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -60,7 +60,7 @@
     <string name="or">या</string>
     <string name="or_caps">- या -</string>
     <string name="skip">छोड़ें</string>
-    <string name="forgot_password">पासवर्ड भूल गए?</string>
+    <string name="forgot_password">पासवर्ड भूल गए</string>
     <string name="forgot_password_u"><b><u>पासवर्ड भूल गए?</u></b></string>
     <string name="email_id">Email for FB Login </string>
     <string name="dont_have_an_account">खाता नहीं है?</string>
