--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -65,7 +65,7 @@
     <string name="or">หรือ</string>
     <string name="or_caps">- หรือ -</string>
     <string name="skip">ข้าม</string>
-    <string name="forgot_password">ลืมพาสเวิร์ด?</string>
+    <string name="forgot_password">ลืมพาสเวิร์ด</string>
     <string name="forgot_password_u"><b><u>ลืมพาสเวิร์ด?</u></b></string>
 
     <string name="dont_have_an_account">ไม่มีบัญชีผู้ใช้?</string>
