--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -53,6 +53,7 @@
     <string name="sign_in_with_enveu">Demo के साथ साइन इन करें</string>
     <string name="facebook">Facebook</string>
     <string name="sign_in_with_facebook">Facebook के साथ साइन इन करें</string>
+    <string name="sign_up_with_facebook">Facebook के साथ साइन इन करें</string>
     <string name="google">Google +</string>
     <string name="register">रजिस्टर</string>
     <string name="sign_in"><b><u>दाखिल करना</u></b></string>
